remove testling tag, test through travis ci with chrome browser

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Gets/sets an element style property",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/standard && ./node_modules/.bin/browserify test.js | ./node_modules/.bin/testling | ./node_modules/.bin/coverify "
+    "prestart": "npm install",
+    "test": "./node_modules/.bin/standard && ./node_modules/.bin/browserify test.js | ./node_modules/.bin/testling | ./node_modules/.bin/coverify"
   },
   "repository": {
     "type": "git",
@@ -30,20 +31,5 @@
     "standard": "^7.1.2",
     "tape": "^4.6.0",
     "testling": "^1.7.1"
-  },
-  "testling": {
-    "files": "test.js",
-    "browsers": [
-      "ie/8..latest",
-      "firefox/17..latest",
-      "firefox/nightly",
-      "chrome/22..latest",
-      "chrome/canary",
-      "opera/12..latest",
-      "opera/next",
-      "safari/5.1..latest",
-      "ipad/6.0..latest",
-      "iphone/6.0..latest"
-    ]
   }
 }
